{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 1359,
  "lineage": "a569b0a9-25be-54f6-92d4-5f0a568a6ce7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "desafio_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:833371734412:loadbalancer/app/desafio-alb-Wthpq/c695c04795569973",
            "arn_suffix": "app/desafio-alb-Wthpq/c695c04795569973",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "desafio-alb-Wthpq-14334579.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:833371734412:loadbalancer/app/desafio-alb-Wthpq/c695c04795569973",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "desafio-alb-Wthpq",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ba32ec815b626081"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024e428553ab01765"
              },
              {
                "subnet_id": "subnet-0fae8f4bed658e2f7"
              }
            ],
            "subnets": [
              "subnet-024e428553ab01765",
              "subnet-0fae8f4bed658e2f7"
            ],
            "tags": {
              "Name": "desafio-rds"
            },
            "tags_all": {
              "Name": "desafio-rds"
            },
            "vpc_id": "vpc-0b648cef8e82add73",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "desafio_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:833371734412:targetgroup/desafio-target-group-Wthpq/fb703a8330685ec8",
            "arn_suffix": "targetgroup/desafio-target-group-Wthpq/fb703a8330685ec8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:833371734412:targetgroup/desafio-target-group-Wthpq/fb703a8330685ec8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "desafio-target-group-Wthpq",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:security-group/sg-0ba32ec815b626081",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba32ec815b626081",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-Wthpq",
            "name_prefix": "",
            "owner_id": "833371734412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-Wthpq"
            },
            "tags_all": {
              "Name": "alb-sg-Wthpq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:security-group/sg-0a19b1a8c74efa032",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a19b1a8c74efa032",
            "ingress": [],
            "name": "desafio-cluster-cluster-2024082818050443230000000c",
            "name_prefix": "desafio-cluster-cluster-",
            "owner_id": "833371734412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "desafio-cluster",
              "Name": "desafio-cluster-cluster"
            },
            "tags_all": {
              "Example": "desafio-cluster",
              "Name": "desafio-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:security-group/sg-0e3384bf29d4e1e09",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e3384bf29d4e1e09",
            "ingress": [],
            "name": "desafio-cluster-node-2024082818050513480000000d",
            "name_prefix": "desafio-cluster-node-",
            "owner_id": "833371734412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "desafio-cluster",
              "Name": "desafio-cluster-node",
              "kubernetes.io/cluster/desafio-cluster": "owned"
            },
            "tags_all": {
              "Example": "desafio-cluster",
              "Name": "desafio-cluster-node",
              "kubernetes.io/cluster/desafio-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3761294690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a19b1a8c74efa032",
            "security_group_rule_id": "sgr-0bedc901444369db7",
            "self": false,
            "source_security_group_id": "sg-0e3384bf29d4e1e09",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1378097155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0688e5af283798fab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3527619683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0f51044d1f2360922",
            "self": false,
            "source_security_group_id": "sg-0a19b1a8c74efa032",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1730204520",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-02a8cbd0dcef65aef",
            "self": false,
            "source_security_group_id": "sg-0a19b1a8c74efa032",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2925704446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-03a6b7f7e02f29cfb",
            "self": false,
            "source_security_group_id": "sg-0a19b1a8c74efa032",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3174992095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0a5b801b740e76c82",
            "self": false,
            "source_security_group_id": "sg-0a19b1a8c74efa032",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3651123988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0a339857b2b3fd90f",
            "self": false,
            "source_security_group_id": "sg-0a19b1a8c74efa032",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-31203221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0599a8d58c43e7919",
            "self": false,
            "source_security_group_id": "sg-0a19b1a8c74efa032",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2741018791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0869c5eb6c2996a27",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3030140047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0ee306771d9703ac3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-281274208",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e3384bf29d4e1e09",
            "security_group_rule_id": "sgr-0df1aa02027464c4c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:security-group/sg-0f9266d3350378045",
            "description": "Security group for RDS in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9266d3350378045",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.123.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "833371734412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "desafio-rds"
            },
            "tags_all": {
              "Name": "desafio-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:network-acl/acl-019f2949faf95557b",
            "default_network_acl_id": "acl-019f2949faf95557b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-019f2949faf95557b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "833371734412",
            "subnet_ids": [
              "subnet-00108161fc2f6e03e",
              "subnet-024e428553ab01765",
              "subnet-0f5d06e99c37f10d0",
              "subnet-0fae8f4bed658e2f7"
            ],
            "tags": {
              "Name": "desafio-vpc-default"
            },
            "tags_all": {
              "Name": "desafio-vpc-default"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:route-table/rtb-00343894a1e2df339",
            "default_route_table_id": "rtb-00343894a1e2df339",
            "id": "rtb-00343894a1e2df339",
            "owner_id": "833371734412",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "desafio-vpc-default"
            },
            "tags_all": {
              "Name": "desafio-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:security-group/sg-05e40a57754d6711c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05e40a57754d6711c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "833371734412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "desafio-vpc-default"
            },
            "tags_all": {
              "Name": "desafio-vpc-default"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e617265504bc795a",
            "arn": "arn:aws:ec2:us-west-1:833371734412:elastic-ip/eipalloc-0e617265504bc795a",
            "domain": "vpc",
            "id": "eipalloc-0e617265504bc795a",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-153-34-86.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.34.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "desafio-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "desafio-vpc-us-west-1b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee9a6551e3af342d",
            "arn": "arn:aws:ec2:us-west-1:833371734412:elastic-ip/eipalloc-0ee9a6551e3af342d",
            "domain": "vpc",
            "id": "eipalloc-0ee9a6551e3af342d",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-219-232-128.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.232.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "desafio-vpc-us-west-1c"
            },
            "tags_all": {
              "Name": "desafio-vpc-us-west-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:internet-gateway/igw-0a6783a78840bf6e1",
            "id": "igw-0a6783a78840bf6e1",
            "owner_id": "833371734412",
            "tags": {
              "Name": "desafio-vpc"
            },
            "tags_all": {
              "Name": "desafio-vpc"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e617265504bc795a",
            "association_id": "eipassoc-0375ce7baf83a956b",
            "connectivity_type": "public",
            "id": "nat-0114e581f83ef1d82",
            "network_interface_id": "eni-05988db1ca9d30294",
            "private_ip": "10.123.1.61",
            "public_ip": "54.153.34.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024e428553ab01765",
            "tags": {
              "Name": "desafio-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "desafio-vpc-us-west-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee9a6551e3af342d",
            "association_id": "eipassoc-0a3687cae0c11ef20",
            "connectivity_type": "public",
            "id": "nat-038e6976d479d0b86",
            "network_interface_id": "eni-0e7863049a51c9c8b",
            "private_ip": "10.123.2.115",
            "public_ip": "54.219.232.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fae8f4bed658e2f7",
            "tags": {
              "Name": "desafio-vpc-us-west-1c"
            },
            "tags_all": {
              "Name": "desafio-vpc-us-west-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d976a97c0dec2f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0114e581f83ef1d82",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d976a97c0dec2f6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fb19fda920c3e12e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-038e6976d479d0b86",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb19fda920c3e12e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a6783a78840bf6e1",
            "id": "r-rtb-01fc9d85a7d44ce2d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fc9d85a7d44ce2d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:route-table/rtb-02d976a97c0dec2f6",
            "id": "rtb-02d976a97c0dec2f6",
            "owner_id": "833371734412",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "desafio-vpc-private-us-west-1b"
            },
            "tags_all": {
              "Name": "desafio-vpc-private-us-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:route-table/rtb-0fb19fda920c3e12e",
            "id": "rtb-0fb19fda920c3e12e",
            "owner_id": "833371734412",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "desafio-vpc-private-us-west-1c"
            },
            "tags_all": {
              "Name": "desafio-vpc-private-us-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:route-table/rtb-01fc9d85a7d44ce2d",
            "id": "rtb-01fc9d85a7d44ce2d",
            "owner_id": "833371734412",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "desafio-vpc-public"
            },
            "tags_all": {
              "Name": "desafio-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d849b086e618e186",
            "route_table_id": "rtb-02d976a97c0dec2f6",
            "subnet_id": "subnet-0f5d06e99c37f10d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaad0441cc22834c",
            "route_table_id": "rtb-0fb19fda920c3e12e",
            "subnet_id": "subnet-00108161fc2f6e03e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba37c61b006fdff4",
            "route_table_id": "rtb-01fc9d85a7d44ce2d",
            "subnet_id": "subnet-024e428553ab01765"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053635d7208ee284c",
            "route_table_id": "rtb-01fc9d85a7d44ce2d",
            "subnet_id": "subnet-0fae8f4bed658e2f7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:subnet/subnet-0f5d06e99c37f10d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5d06e99c37f10d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "833371734412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "desafio-vpc-private-us-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "desafio-vpc-private-us-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:subnet/subnet-00108161fc2f6e03e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00108161fc2f6e03e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "833371734412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "desafio-vpc-private-us-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "desafio-vpc-private-us-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:subnet/subnet-024e428553ab01765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024e428553ab01765",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "833371734412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "desafio-vpc-public-us-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "desafio-vpc-public-us-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:subnet/subnet-0fae8f4bed658e2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fae8f4bed658e2f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "833371734412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "desafio-vpc-public-us-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "desafio-vpc-public-us-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b648cef8e82add73"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:833371734412:vpc/vpc-0b648cef8e82add73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-019f2949faf95557b",
            "default_route_table_id": "rtb-00343894a1e2df339",
            "default_security_group_id": "sg-05e40a57754d6711c",
            "dhcp_options_id": "dopt-0864c3cec56fb2413",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b648cef8e82add73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00343894a1e2df339",
            "owner_id": "833371734412",
            "tags": {
              "Name": "desafio-vpc"
            },
            "tags_all": {
              "Name": "desafio-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}